added more grep

--- a/04-Working-with-Unix.Rmd
+++ b/04-Working-with-Unix.Rmd
@@ -303,7 +303,6 @@ ls
 ```
 
 ```
-a-tale-of-two-cities.txt
 canada.txt
 states.txt
 ```
@@ -316,8 +315,8 @@ wc states.txt
 50      60     472 states.txt
 ```
 
-Makes sense that there are 50 lines, but it's interesting that there are 60
-total words. Let's a take a peak at the beginning fo the file:
+It makes sense that there are 50 lines, but it's interesting that there are 60
+total words. Let's a take a peak at the beginning of the file:
 
 ```{r, engine='bash', eval=FALSE}
 head states.txt
@@ -337,9 +336,9 @@ Georgia
 ```
 
 This file looks basically how you would expect it to look! You may recall from
-chapter 3 that the kind of shell that we're using is the bash shell. Bash
+Chapter 3 that the kind of shell that we're using is the bash shell. Bash
 treats different kinds of data differently, and we'll dive deeper into data
-types in chapter 5. For now all you need to know is that text data are
+types in Chapter 5. For now all you need to know is that text data are
 called **strings**. A string could be a word, a sentence, a book, or a file or 
 folder name. One of the most effective ways to search through strings is to use
 **regular expressions**. Regular expressions are strings that define patterns
@@ -349,7 +348,7 @@ another string.
 
 One of the most popular tools for searching through text files is `grep`. The
 simplest use of `grep` requires two arguments: a regular expression and a text
-file to search. Let's see an simple example of `grep` in action and then I'll
+file to search. Let's see a simple example of `grep` in action and then I'll
 explain how it works:
 
 ```{r, engine='bash', eval=FALSE}
@@ -364,15 +363,236 @@ Texas
 In the command above, the first argument to `grep` is the regular expression
 `"x"`. The `"x"` regular expression represents one instance of the letter "x".
 Every line of the `states.txt` file that contains at least one instance of the
-letter "x" is printed to the console. As you can see, only two state names
-contain the letter "x", New Mexico and Texas. Let's try searching for the letter
-"q" in all of the state names using `grep`:
+letter "x" is printed to the console. As you can see New Mexico and Texas are
+the only two state names that contain the letter "x". Let's try searching for 
+the letter "q" in all of the state names using `grep`:
 
 ```{r, engine='bash', eval=FALSE}
 grep "q" states.txt
 ```
 
-Nothing happens!
+Nothing is printned to the console because the letter "q" isn't in any of the
+state names. We can search for more than individual characters though. For
+example the following command will search for the state names that contain the
+word "New":
+
+```{r, engine='bash', eval=FALSE}
+grep "New" states.txt
+```
+
+```
+New Hampshire
+New Jersey
+New Mexico
+New York
+```
+
+In the previous case the regular expression we used was simply `"New"`, which
+represents an occurrence of the string "New". Regular expressions are not
+limitted to just being indiviual characters or words, they can also represent
+parts of words. For example I could search all of the state names that contain
+the string "nia" with the following command:
+
+```{r, engine='bash', eval=FALSE}
+grep "nia" states.txt
+```
+
+```
+California
+Pennsylvania
+Virginia
+West Virginia
+```
+
+All of the state name above happen to end with the string "nia".
+
+Regular expressions aren't just limitted to searching with characters and
+strings, the real power of regular expressions come from using
+**metacharacters**. Remember that metacharacters are characters that can be used
+to represent other characters. To take full advantage of all of the metacharacters
+we should use `grep`'s cousin `egrep`, which just extends `grep`'s capabilities.
+The first metacharacter we should discuss is the
+`"."` (period) metacharacter, which represents *any* character. If for example I wanted to
+search `states.txt` for the character "i", followed by any character, followed
+by the character "g" I could do so with the following command:
+
+```{r, engine='bash', eval=FALSE}
+egrep "i.g" states.txt
+```
+
+```
+Virginia
+Washington
+West Virginia
+Wyoming
+```
+
+The regular expression "i.g" matches the sub-string "irg" in V*irg*inia, and
+West V*irg*inia, and it matches the sub-string "ing" in Wash*ing*ton and
+Wyom*ing*. The period metacharacter is a stand-in for the "r" in "irg" and the
+"n" in "ing" in the example above. The period metacharacter is extremely liberal,
+for example the command `egrep "." states.txt` would return every line of
+states.txt since the regular expression `"."` would match one occurrence of any
+character on every line (there's at least one character on every line). 
+
+Besides characters that can represent other
+characters, there are also metacharacters called **quantifiers** which allow you
+to specify the number of times a regular expressions should appear in string.
+One of the most basic quantifiers is `"+"` (plus) which represents one or more
+occurrences of the proceeding expression. For example the regular expression
+"s+as" means: one or more "s" followed by "as". Let's see if any of the state
+names match this expression:
+
+```{r, engine='bash', eval=FALSE}
+egrep "s+as" states.txt
+```
+
+```
+Arkansas
+Kansas
+```
+
+Both Arkan*sas* and Kan*sas* match the regular expression `"s+as"`. Besides the
+plus metacharacter there's also the `"*"` (star) metacharacter which represents
+zero or more occurrences of the preceding expression. Let's see what happens if
+we change `"s+as"` to `"s*as"`:
+
+```{r, engine='bash', eval=FALSE}
+egrep "s*as" states.txt
+```
+
+```
+Alaska
+Arkansas
+Kansas
+Massachusetts
+Nebraska
+Texas
+Washington
+```
+
+As you can see the star metacharacter is much more liberal with repect to
+matching since many more state names are matched by `"s*as"`. There are more
+specific quantifies you can use beyond "zero or more" or "one or more"
+occurrences of an expression. You can use curly brackets (`{ }`) to specify an
+exact number of occurrences of an expression. For example the regular expression
+`"s{2}"` specifies exactly two occurrences of the character "s". Let's try using
+this regular expression:
+
+```{r, engine='bash', eval=FALSE}
+egrep "s{2}" states.txt
+```
+
+```
+Massachusetts
+Mississippi
+Missouri
+Tennessee
+```
+
+Take note that the regular expression `"s{2}"` is equivalent to the regular
+expression `"ss"`. We could also search for state names that have between two
+and three adjacent occurrences of the letter "s" with the regular expression
+`"s{2,3}"`:
+
+```{r, engine='bash', eval=FALSE}
+egrep "s{2,3}" states.txt
+```
+
+```
+Massachusetts
+Mississippi
+Missouri
+Tennessee
+```
+
+Of course the results are the same because there aren't any states that have "s"
+repeated three times.
+
+You can use a **capturing group** in order to search for multiple occurrences of
+a string. You can create capturing groups within regular expressions by using
+parentheses (`"( )"`). For example if I wanted to search states.txt for the
+string "iss" occurring twice in a state name I could use a capturing group and
+a quantifier like so:
+
+```{r, engine='bash', eval=FALSE}
+egrep "(iss){2}" states.txt
+```
+
+```
+Mississippi
+```
+
+We could combine mroe quantifiers and capturing groups to dream up even more
+complicated regular expressions. For example, the following regular expression
+describes three occurrences of an "i" followed by two of any character:
+
+```{r, engine='bash', eval=FALSE}
+egrep "(i.{2}){3}" states.txt
+```
+
+```
+Mississippi
+```
+
+The complex regular expression above still only matches "Mississippi".
+
+For the next couple of examples we're going to need some text data beyond the
+names of the states. Let's just create a short text file from the console:
+
+```{r, engine='bash', eval=FALSE}
+touch small.txt
+echo "abcdefghijklmnopqrstuvwxyz" >> small.txt
+echo "ABCDEFGHIJKLMNOPQRSTUVWXYZ" >> small.txt
+echo "0123456789" >> small.txt
+echo "aa bb cc" >> small.txt
+echo "rhythms" >> small.txt
+echo "xyz" >> small.txt
+echo "abc" >> small.txt
+echo "tragedy + time = humor" >> small.txt
+echo "http://www.jhsph.edu/" >> small.txt
+```
+
+In addition to quantifiers there are also regular expressions for describing
+sets of characters. The `\w` metacharacter corresponds to all "word" characters,
+the `\d` metacharacter corresponds to all "number" characters, and the `\s`
+metacharacter corresponds to all "space" characters. Let's take a look at using
+each of these metacharacters on small.txt:
+
+```{r, engine='bash', eval=FALSE}
+egrep "\w" small.txt
+```
+
+```
+abcdefghijklmnopqrstuvwxyz
+ABCDEFGHIJKLMNOPQRSTUVWXYZ
+0123456789
+aa bb cc
+rhythms
+xyz
+abc
+tragedy + time = humor
+http://www.jhsph.edu/
+```
+
+```{r, engine='bash', eval=FALSE}
+egrep "\d" small.txt
+```
+
+```
+0123456789
+```
+
+```{r, engine='bash', eval=FALSE}
+egrep "\s" small.txt
+```
+
+```
+aa bb cc
+tragedy + time = humor
+```
+
+
 
 -n line number
 -x exact
@@ -386,9 +606,6 @@ Nothing happens!
 
 ## Make
 
-## Control
-
-- chmod
 
 ## Configure
 
